pages/docs/api/v2/api-docs-mdx/api-basics/types.mdx
import {
  Table,
  Row,
  Cell,
  BoldCell,
  FullWidthCell
} from '~/components/api/table'
import { GenericLink } from '~/components/text/link'
import { InlineCode } from '~/components/text/code'

export const meta = {
  editUrl: 'pages/docs/api/v2/api-docs-mdx/api-basics/types.mdx',
  lastEdited: '2019-01-03T18:58:18.000Z'
}

## Types

The following is a list of the types of data used within the Now API:

| Name        | Definition                                                             | Example                      |
| ----------- | ---------------------------------------------------------------------- | ---------------------------- |
| **ID**      | A unique value used to identify resources.                             | `"V0fra8eEgQwEpFhYG2vTzC3K"` |
| **String**  | A string is a sequence of characters used to represent text.           | `"ZEIT"`                     |
| **Integer** | An integer is a number without decimals.                               | `1234`                       |
| **Float**   | A float is a number with decimals.                                     | `12.34`                      |
| **Map**     | A data structure with a list of values assigned to a unique key.       | `{ "service": "ZEIT" }`      |
| **List**    | A data structure with only a list of values separated by a comma.      | `["ZEIT", 1234, 12.34]`      |
| **Enum**    | An Enum is a String with only a few possible valid values.             | `"A" | "B"`                  |
| **Date**    | An Integer representing a date in milliseconds since the UNIX epoch.   | `1540095775941`              |
| **Boolean** | A Boolean is a type of two possible values representing true or false. | `true`                       |
